<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".feature.centersfeed.view.activity.CentersFeedActivity">

        <TextView
            android:id="@+id/tvTitleRefId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvValueRefId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            tools:text="Mocked Value" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/tvTitleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_refid"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvValueType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            tools:text="Mocked Value" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/tvTitleId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_type"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvValueId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            tools:text="Mocked Value" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/tvTitleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_id"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvValueTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            tools:text="Mocked Value" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/cardview_dark_background"/>

        <TextView
            android:id="@+id/tvTitleRelation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_relation"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvValueRelation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            tools:text="Mocked Value" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/cardview_dark_background" />

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/tvOtherInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            tools:text="Mocked Value" />
    </LinearLayout>
</ScrollView>